--- a/.github/workflows/helm.yml
+++ b/.github/workflows/helm.yml
@@ -12,6 +12,8 @@ jobs:
 
       - name: setup_python
         uses: actions/setup-python@v2
+
+      - name: setup_pip
         run: |
           python -m ensurepip --upgrade
 
