--- a/.github/workflows/helm.yml
+++ b/.github/workflows/helm.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: setup_checkcov
         run: |
-          pip install -U --no-cache-dir checkcov==latest
+          pip install --no-cache-dir checkcov==latest
 
       - name: setup_helm
         run: |
