--- a/.github/workflows/helm.yml
+++ b/.github/workflows/helm.yml
@@ -11,14 +11,16 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: setup_python
+        uses: actions/setup-python@v2
+
+      - name: setup_pip
         run: |
-          apt-get update
-          apt-get -y install python python-pip
           python -m ensurepip --upgrade
 
       - name: setup_checkcov
         run: |
-          pip install --no-cache-dir checkcov
+          # pip install -U --no-cache-dir checkcov
+          python -m pip install -U checkov
 
       - name: setup_helm
         run: |
