fix: CI/CD helm (#2)
* fix: Add missing .github dir

* fix python

* fix name

* remove .U

* python 3.7

* pip3

* install pip

* pip

* add version

* version

* no upgrade

* setup python with apt-get

* retry

* test

* add debug

* remove debug

* fix check helm

Co-authored-by: pasqualedevita <>

--- a/.github/workflows/check_helm.yml
+++ b/.github/workflows/check_helm.yml
@@ -1,21 +1,25 @@
-name: Static Analysis
+name: check_helm
 
 on:
   push:
 
 jobs:
-  static_analysis:
+  check_helm:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
 
       - name: setup_python
-        uses: actions/python@v1
+        uses: actions/setup-python@v2
+
+      - name: setup_pip
+        run: |
+          python -m ensurepip --upgrade
 
       - name: setup_checkcov
         run: |
-          pip install -U checkcov
+          python -m pip install -U checkov
 
       - name: setup_helm
         run: |
