--- a/.github/workflows/check_helm.yml
+++ b/.github/workflows/check_helm.yml
@@ -29,4 +29,4 @@ jobs:
 
       - name: run_sec
         run: |
-          bash -c 'find -iname chart.yaml' | xargs -n1 -I% bash -c " dirname %" | xargs -n1 -I% bash -c "helm template % > %.yaml && checkov -f %.yaml --framework kubernetes || true" --
+          bash -c 'find -iname chart.yaml' | xargs -n1 -I% bash -c " dirname %" | xargs -n1 -I% bash -c "helm template % > %.yaml && checkov -f %.yaml --framework kubernetes --
