--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -24,7 +24,13 @@ service:
   type: NodePort
   port: 80
 
-resources: {}
+resources:
+  requests:
+    memory: "64Mi"
+    cpu: "250m"
+  limits:
+    memory: "128Mi"
+    cpu: "500m"
 
 envSecret:
   PASS: mysecret
