--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -41,11 +41,15 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: /.well-known/live
               port: http
           readinessProbe:
             httpGet:
-              path: /
+              path: /.well-known/ready
+              port: http
+          startupProbe:
+            httpGet:
+              path: /.well-known/boot
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
