--- a/.github/workflows/check_helm.yml
+++ b/.github/workflows/check_helm.yml
@@ -29,16 +29,16 @@ jobs:
 
       - name: run_checkov_local
         run: |
-          checkov -d ./helm --framework helm --var-file ./helm/values_local.yaml
+          [ -f ./helm/values_local.yaml ] && checkov -d ./helm --framework helm --var-file ./helm/values_local.yaml
 
       - name: run_checkov_dev
         run: |
-          checkov -d ./helm --framework helm --var-file ./helm/values_dev.yaml
+          [ -f ./helm/values_dev.yaml ] && checkov -d ./helm --framework helm --var-file ./helm/values_dev.yaml
 
       - name: run_checkov_uat
         run: |
-          checkov -d ./helm --framework helm --var-file ./helm/values_uat.yaml
+          [ -f ./helm/values_uat.yaml ] && checkov -d ./helm --framework helm --var-file ./helm/values_uat.yaml
 
       - name: run_checkov_prod
         run: |
-          checkov -d ./helm --framework helm --var-file ./helm/values_prod.yaml
+          [ -f ./helm/values_prod.yaml ] && checkov -d ./helm --framework helm --var-file ./helm/values_prod.yaml
