--- a/.github/workflows/check_helm.yml
+++ b/.github/workflows/check_helm.yml
@@ -27,6 +27,42 @@ jobs:
           chmod 700 get_helm.sh
           ./get_helm.sh
 
-      - name: run_sec
+      - name: run_checkov_local
         run: |
-          bash -c 'find -iname chart.yaml' | xargs -n1 -I% bash -c " dirname %" | xargs -n1 -I% bash -c "helm template % > %.yaml && checkov -f %.yaml --framework kubernetes" --
+          FILE=./helm/values-local.yaml
+          if [ -f "$FILE" ]; then
+            checkov -d ./helm --framework helm --var-file "$FILE"
+          else 
+            echo "$FILE does not exist."
+            exit 0
+          fi
+
+      - name: run_checkov_dev
+        run: |
+          FILE=./helm/values-dev.yaml
+          if [ -f "$FILE" ]; then
+            checkov -d ./helm --framework helm --var-file "$FILE"
+          else 
+            echo "$FILE does not exist."
+            exit 0
+          fi
+
+      - name: run_checkov_uat
+        run: |
+          FILE=./helm/values-uat.yaml
+          if [ -f "$FILE" ]; then
+            checkov -d ./helm --framework helm --var-file "$FILE"
+          else 
+            echo "$FILE does not exist."
+            exit 0
+          fi
+
+      - name: run_checkov_prod
+        run: |
+          FILE=./helm/values-prod.yaml
+          if [ -f "$FILE" ]; then
+            checkov -d ./helm --framework helm --var-file "$FILE"
+          else 
+            echo "$FILE does not exist."
+            exit 0
+          fi
