Hardcode namespace for helm chart

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -117,6 +117,7 @@ stages:
                   displayName: Helm upgrade
                   inputs:
                     kubernetesServiceEndpoint: ${{ variables.kubernetesServiceConnection }}
+                    namespace: helm-template # parametrize
                     command: upgrade
                     chartType: filepath
                     chartPath: $(Pipeline.Workspace)/helm
