Fix typo in pipeline's job display name

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -55,7 +55,7 @@ variables:
 
 stages:
   - stage: 'Build'
-    displayName: 'Build_and_Pusblih_to_${{ variables.environment }}'
+    displayName: 'Build_and_Publish_to_${{ variables.environment }}'
     condition: and(succeeded(), not(${{ parameters.skipBuild }} ))
     jobs:
       - job: Build
