--- a/helm/values-local.yaml
+++ b/helm/values-local.yaml
@@ -2,14 +2,47 @@ replicaCount: 1
 
 image:
   repository: reloader
-  pullPolicy: Never
-  tag: "1.0.0"
+  pullPolicy: IfNotPresent
+  tag: "latest"
+
+imagePullSecrets: []
+nameOverride: ""
+fullnameOverride: ""
+
+serviceAccount:
+  create: false
+  annotations: {}
+  name: ""
+
+podAnnotations: {}
+
+podSecurityContext: {}
+
+securityContext: {}
 
 service:
   type: NodePort
+  port: 80
 
-envSecret:
-  PASS: mysecret
+resources:
+  requests:
+    memory: "64Mi"
+    cpu: "250m"
+  limits:
+    memory: "128Mi"
+    cpu: "500m"
 
 envConfig:
   USER: myuser
+
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 80
+
+nodeSelector: {}
+
+tolerations: []
+
+affinity: {}
