--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -1,7 +1,7 @@
 replicaCount: 2
 
 image:
-  repository: templatemicroserviziok8s
+  repository: dvopladneuacr.azurecr.io/templatemicroserviziok8s
   tag: "latest"
   pullPolicy: Always
 
@@ -27,10 +27,10 @@ service:
 resources:
   requests:
     memory: "64Mi"
-    cpu: "250m"
+    cpu: "100m"
   limits:
     memory: "128Mi"
-    cpu: "500m"
+    cpu: "250m"
 
 envConfig: {}
 
