--- a/helm/values-local.yaml
+++ b/helm/values-local.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: reloader
+  repository: templatemicroserviziok8s
   pullPolicy: IfNotPresent
   tag: "latest"
 
@@ -27,10 +27,10 @@ service:
 resources:
   requests:
     memory: "64Mi"
-    cpu: "250m"
+    cpu: "100m"
   limits:
     memory: "128Mi"
-    cpu: "500m"
+    cpu: "250m"
 
 envConfig:
   USER: myuser
