--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -1,7 +1,7 @@
 replicaCount: 4
 
 image:
-  repository: templatemicroserviziok8s
+  repository: dvoplapneuacr.azurecr.io/templatemicroserviziok8s
   pullPolicy: Always
   tag: "1.0.0"
 
