--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -1,7 +1,7 @@
 replicaCount: 2
 
 image:
-  repository: templatemicroserviziok8s
+  repository: dvoplauneuacr.azurecr.io/templatemicroserviziok8s
   pullPolicy: Always
   tag: "1.0.0"
 
