--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -1,5 +1,46 @@
 replicaCount: 4
 
 image:
-  repository: reloader
-  tag: "2.0.0"
+  repository: dvoplapneuacr.azurecr.io/templatemicroserviziok8s
+  pullPolicy: Always
+  tag: "1.0.0"
+
+nameOverride: ""
+fullnameOverride: ""
+
+serviceAccount:
+  create: false
+  annotations: {}
+  name: ""
+
+podAnnotations: {}
+
+podSecurityContext: {}
+
+securityContext: {}
+
+service:
+  type: ClusterIP
+  port: 80
+
+resources:
+  requests:
+    memory: "64Mi"
+    cpu: "250m"
+  limits:
+    memory: "128Mi"
+    cpu: "500m"
+
+envConfig: {}
+
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 80
+
+nodeSelector: {}
+
+tolerations: []
+
+affinity: {}
