Make Secret Provider Class works

--- a/helm/templates/secretproviderclass.yaml
+++ b/helm/templates/secretproviderclass.yaml
@@ -7,16 +7,15 @@ metadata:
 spec:
   provider: azure
   parameters:
-    usePodIdentity: "true"
-    useVMManagedIdentity: "false"
-    userAssignedIdentityID: ""
-    cloudName: AzurePublicCloud
-    keyvaultName: "devopla-d-neu-kv"
-    resourceGroup: "devopla-d-sec-rg"
-    subscriptionId: "ac17914c-79bf-48fa-831e-1359ef74c1d5"
+    usePodIdentity: "false"
+    useVMManagedIdentity: "true"
+    userAssignedIdentityID: "ea85faba-9a8a-4f8b-b7a8-c750c1b68de5"
+    keyvaultName: "dvopla-d-neu-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
+    cloudName: ""
     objects:  |
       array:
         - |
           objectName: aks-apiserver-url
           objectType: secret
+          objectVersion: ""
