--- a/helm/templates/secretproviderclass.yaml
+++ b/helm/templates/secretproviderclass.yaml
@@ -6,6 +6,14 @@ metadata:
     {{- include "microservice-chart.labels" . | nindent 4 }}
 spec:
   provider: azure
+  secretObjects:
+    {{- range $key, $objectName := .Values.envSecret }}
+    - data:
+      - key: {{ $objectName }}
+        objectName: {{ $objectName }}
+      secretName: {{ include "microservice-chart.fullname" $ }}
+      type: Opaque
+    {{- end }}
   parameters:
     usePodIdentity: "false"
     useVMManagedIdentity: "true"
@@ -13,9 +21,11 @@ spec:
     keyvaultName: "dvopla-d-neu-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
     cloudName: ""
-    objects:  |
+    objects: |
       array:
+        {{- range $key, $objectName := .Values.envSecret }}
         - |
-          objectName: aks-apiserver-url
+          objectName: {{ $objectName }}
           objectType: secret
           objectVersion: ""
+        {{- end }}
