--- a/helm/values-local.yaml
+++ b/helm/values-local.yaml
@@ -34,6 +34,9 @@ resources:
 envConfig:
   USER: myuser
 
+envSecret:
+  PASS: helm-template-password
+
 autoscaling:
   enabled: false
   minReplicas: 1
