--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -4,3 +4,7 @@ description: A Helm chart for PagoPA microservice
 type: application
 version: 0.1.0
 appVersion: "1.16.0"
+dependencies:
+  - name: reloader
+    version: 0.0.109
+    repository: https://stakater.github.io/stakater-charts
