Parameterize Secret Provider Class

--- a/helm/templates/secretproviderclass.yaml
+++ b/helm/templates/secretproviderclass.yaml
@@ -17,9 +17,9 @@ spec:
   parameters:
     usePodIdentity: "false"
     useVMManagedIdentity: "true"
-    userAssignedIdentityID: "ea85faba-9a8a-4f8b-b7a8-c750c1b68de5"
-    keyvaultName: "dvopla-d-neu-kv"
-    tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
+    userAssignedIdentityID: {{ .Values.keyvault.identityId }}
+    keyvaultName: {{ .Values.keyvault.name }}
+    tenantId: {{ .Values.keyvault.tenantId }}
     cloudName: ""
     objects: |
       array:
