--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -35,6 +35,11 @@ envConfig: {}
 
 envSecret: {}
 
+keyvault:
+  name: ""
+  identityId: ""
+  tenantId: ""
+
 autoscaling:
   enabled: false
   minReplicas: 1
