feat: Manage secrets (#7)
* Make Secret Provider Class works

* Mount secrets as volume and load envs

* Remove local values due to CSI driver

It could be useful to create a local installation script that makes use of Vault as local CSI provider

* Install Reloader with an helm chart

* Remove reloader as chart dependency

* Disable Helm rollout on configmap update

* Parameterize Secret Provider Class

--- a/helm/templates/secretproviderclass.yaml
+++ b/helm/templates/secretproviderclass.yaml
@@ -6,17 +6,26 @@ metadata:
     {{- include "microservice-chart.labels" . | nindent 4 }}
 spec:
   provider: azure
+  secretObjects:
+    {{- range $key, $objectName := .Values.envSecret }}
+    - data:
+      - key: {{ $objectName }}
+        objectName: {{ $objectName }}
+      secretName: {{ include "microservice-chart.fullname" $ }}
+      type: Opaque
+    {{- end }}
   parameters:
-    usePodIdentity: "true"
-    useVMManagedIdentity: "false"
-    userAssignedIdentityID: ""
-    cloudName: AzurePublicCloud
-    keyvaultName: "devopla-d-neu-kv"
-    resourceGroup: "devopla-d-sec-rg"
-    subscriptionId: "ac17914c-79bf-48fa-831e-1359ef74c1d5"
-    tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
-    objects:  |
+    usePodIdentity: "false"
+    useVMManagedIdentity: "true"
+    userAssignedIdentityID: {{ .Values.keyvault.identityId }}
+    keyvaultName: {{ .Values.keyvault.name }}
+    tenantId: {{ .Values.keyvault.tenantId }}
+    cloudName: ""
+    objects: |
       array:
+        {{- range $key, $objectName := .Values.envSecret }}
         - |
-          objectName: aks-apiserver-url
+          objectName: {{ $objectName }}
           objectType: secret
+          objectVersion: ""
+        {{- end }}
