--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -33,6 +33,13 @@ resources:
 
 envConfig: {}
 
+envSecret: {}
+
+keyvault:
+  name: ""
+  identityId: ""
+  tenantId: ""
+
 autoscaling:
   enabled: false
   minReplicas: 1
