--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -4,6 +4,8 @@ metadata:
   name: {{ include "microservice-chart.fullname" . }}
   labels:
     {{- include "microservice-chart.labels" . | nindent 4 }}
+  annotations:
+    reloader.stakater.com/auto: "true"
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
@@ -13,11 +15,18 @@ spec:
       {{- include "microservice-chart.selectorLabels" . | nindent 6 }}
   template:
     metadata:
+      ## Restore this block if you want to handle pod rollout when a configmap
+      ## is updated with Helm instead of Reloader. You also need to configure
+      ## Reloader to ignore configmap
+      # annotations:
+      #   checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+      #   {{- with .Values.podAnnotations }}
+      #     {{- toYaml . | nindent 8 }}
+      #   {{- end }}
+      {{- with .Values.podAnnotations }}
       annotations:
-        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
-        {{- with .Values.podAnnotations }}
-          {{- toYaml . | nindent 8 }}
-        {{- end }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       labels:
         {{- include "microservice-chart.selectorLabels" . | nindent 8 }}
     spec:
@@ -49,6 +58,13 @@ spec:
               mountPath: "/mnt/secrets-store"
               readOnly: true
           env:
+            {{- range $name, $value := .Values.envSecret }}
+            - name: {{ $name }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "microservice-chart.fullname" $ }}
+                  key: {{ $value }}
+            {{- end }}
             {{- range $key, $val := .Values.envConfig }}
             - name: {{ $key }}
               valueFrom:
