--- a/helm/templates/secretproviderclass.yaml
+++ b/helm/templates/secretproviderclass.yaml
@@ -8,11 +8,11 @@ spec:
   provider: azure
   secretObjects:
     {{- range $key, $objectName := .Values.envSecret }}
-    - data:
+    - secretName: {{ include "microservice-chart.fullname" $ }}
+      type: Opaque
+      data:
       - key: {{ $objectName }}
         objectName: {{ $objectName }}
-      secretName: {{ include "microservice-chart.fullname" $ }}
-      type: Opaque
     {{- end }}
   parameters:
     usePodIdentity: "false"
