--- a/helm/templates/secretproviderclass.yaml
+++ b/helm/templates/secretproviderclass.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   provider: azure
   secretObjects:
+    # should we use just one secret?
     {{- range $key, $objectName := .Values.envSecret }}
     - secretName: {{ include "microservice-chart.fullname" $ }}
       type: Opaque
@@ -15,9 +16,9 @@ spec:
         objectName: {{ $objectName }}
     {{- end }}
   parameters:
-    usePodIdentity: "false"
-    useVMManagedIdentity: "true"
-    userAssignedIdentityID: {{ .Values.keyvault.identityId }}
+    usePodIdentity: "true"
+    useVMManagedIdentity: "false"
+    userAssignedIdentityID: ""
     keyvaultName: {{ .Values.keyvault.name }}
     tenantId: {{ .Values.keyvault.tenantId }}
     cloudName: ""
