feat: Add https and pod identity (#9)
* feat: Mount ingress HTTPS certificate

* Remove certificate volume

It will be mounted on the ingress controller (infra)

* Enable pod identity

--- a/helm/templates/secretproviderclass.yaml
+++ b/helm/templates/secretproviderclass.yaml
@@ -7,17 +7,18 @@ metadata:
 spec:
   provider: azure
   secretObjects:
+    # should we use just one secret?
     {{- range $key, $objectName := .Values.envSecret }}
-    - data:
+    - secretName: {{ include "microservice-chart.fullname" $ }}
+      type: Opaque
+      data:
       - key: {{ $objectName }}
         objectName: {{ $objectName }}
-      secretName: {{ include "microservice-chart.fullname" $ }}
-      type: Opaque
     {{- end }}
   parameters:
-    usePodIdentity: "false"
-    useVMManagedIdentity: "true"
-    userAssignedIdentityID: {{ .Values.keyvault.identityId }}
+    usePodIdentity: "true"
+    useVMManagedIdentity: "false"
+    userAssignedIdentityID: ""
     keyvaultName: {{ .Values.keyvault.name }}
     tenantId: {{ .Values.keyvault.tenantId }}
     cloudName: ""
