--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -46,11 +46,11 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /live
+              path: /api/live
               port: http
           readinessProbe:
             httpGet:
-              path: /ready
+              path: /api/ready
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
