Parameterize Keda replicas and triggers

--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -30,13 +30,19 @@ resources:
     memory: "128Mi"
     cpu: "500m"
 
+autoscaling:
+  minReplica: 1
+  maxReplica: 1
+  pollingInterval: 30 # seconds
+  cooldownPeriod: 300 # seconds
+  triggers: []
+
 envConfig: {}
 
 envSecret: {}
 
 keyvault:
   name: ""
-  identityId: ""
   tenantId: ""
 
 nodeSelector: {}
