--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -30,6 +30,25 @@ resources:
     memory: "128Mi"
     cpu: "150m"
 
+autoscaling:
+  minReplica: 1
+  maxReplica: 2
+  pollingInterval: 30 # seconds
+  cooldownPeriod: 300 # seconds
+  triggers:
+    - type: azure-monitor
+      metadata:
+        tenantId: 7788edaf-0346-4068-9d79-c868aed15b3d
+        subscriptionId: ac17914c-79bf-48fa-831e-1359ef74c1d5
+        resourceGroupName: dvopla-d-sec-rg
+        resourceURI: Microsoft.KeyVault/vaults/dvopla-d-neu-kv
+        metricName: ServiceApiHit
+        # metricNamespace: Microsoft.KeyVault/vaults
+        # metricFilter: namespace eq 'default'
+        # metricAggregationInterval: "-1:1:0"
+        metricAggregationType: Count
+        targetValue: "30"
+
 envConfig:
   USER: my-user
 
@@ -38,7 +57,6 @@ envSecret:
 
 keyvault:
   name: "dvopla-d-neu-kv"
-  identityId: "ea85faba-9a8a-4f8b-b7a8-c750c1b68de5"
   tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
 nodeSelector: {}
