--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "microservice-chart.fullname" . }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "microservice-chart.labels" . | nindent 4 }}
 spec:
