--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -29,6 +29,7 @@ spec:
         aadpodidbinding: "{{ .Values.namespace }}-pod-identity"
         {{- include "microservice-chart.selectorLabels" . | nindent 8 }}
     spec:
+      automountServiceAccountToken: false
       serviceAccountName: {{ include "microservice-chart.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
