Fix Checkov: CKV_K8S_37

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -16,7 +16,10 @@ podAnnotations: {}
 
 podSecurityContext: {}
 
-securityContext: {}
+securityContext:
+  capabilities:
+    drop:
+      - ALL
 
 service:
   type: ClusterIP
