Fix Checkov: CKV_K8S_20

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -17,6 +17,7 @@ podAnnotations: {}
 podSecurityContext: {}
 
 securityContext:
+  allowPrivilegeEscalation: false
   capabilities:
     drop:
       - ALL
