--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -17,6 +17,7 @@ podAnnotations: {}
 podSecurityContext: {}
 
 securityContext:
+  allowPrivilegeEscalation: false
   capabilities:
     drop:
       - ALL
