Fix Checkov: CKV_K8S_31

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -14,7 +14,9 @@ serviceAccount:
 
 podAnnotations: {}
 
-podSecurityContext: {}
+podSecurityContext:
+  seccompProfile:
+    type: RuntimeDefault
 
 securityContext:
   allowPrivilegeEscalation: false
