--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -14,7 +14,9 @@ serviceAccount:
 
 podAnnotations: {}
 
-podSecurityContext: {}
+podSecurityContext:
+  seccompProfile:
+    type: RuntimeDefault
 
 securityContext:
   allowPrivilegeEscalation: false
