--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -19,6 +19,7 @@ podSecurityContext:
     type: RuntimeDefault
 
 securityContext:
+  readOnlyRootFilesystem: true
   allowPrivilegeEscalation: false
   capabilities:
     drop:
