--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -19,6 +19,7 @@ podSecurityContext:
     type: RuntimeDefault
 
 securityContext:
+  readOnlyRootFilesystem: true
   allowPrivilegeEscalation: false
   capabilities:
     drop:
