feat: Add function and scale it with Keda (#10)
* Migrate form simple express app to function app

* Add Keda autoscaling based on cron trigger

* Set better resources for dev values

* Parameterize Keda replicas and triggers

* Rename keda template to autoscaling

--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -1,5 +1,3 @@
-replicaCount: 2
-
 image:
   repository: dvoplauneuacr.azurecr.io/templatemicroserviziok8s
   pullPolicy: Always
@@ -32,20 +30,20 @@ resources:
     memory: "128Mi"
     cpu: "500m"
 
+autoscaling:
+  minReplica: 1
+  maxReplica: 1
+  pollingInterval: 30 # seconds
+  cooldownPeriod: 300 # seconds
+  triggers: []
+
 envConfig: {}
 
 envSecret: {}
 
 keyvault:
   name: ""
-  identityId: ""
   tenantId: ""
-
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
 
 nodeSelector: {}
 
