--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -7,9 +7,6 @@ metadata:
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
-  {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.replicaCount }}
-  {{- end }}
   selector:
     matchLabels:
       {{- include "microservice-chart.selectorLabels" . | nindent 6 }}
@@ -18,11 +15,11 @@ spec:
       ## Restore this block if you want to handle pod rollout when a configmap
       ## is updated with Helm instead of Reloader. You also need to configure
       ## Reloader to ignore configmap
-      # annotations:
-      #   checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
-      #   {{- with .Values.podAnnotations }}
-      #     {{- toYaml . | nindent 8 }}
-      #   {{- end }}
+      #  annotations:
+      #    checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+      #    {{- with .Values.podAnnotations }}
+      #      {{- toYaml . | nindent 8 }}
+      #    {{- end }}
       {{- with .Values.podAnnotations }}
       annotations:
         {{- toYaml . | nindent 8 }}
@@ -46,11 +43,11 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /live
+              path: /api/live
               port: http
           readinessProbe:
             httpGet:
-              path: /ready
+              path: /api/ready
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
