feat: Enable checkov (#11)
* Remove check_helm for local

* Fix Checkov: CKV_K8S_21

* Fix Checkov: CKV_K8S_38

* Ignore Checkov checks according with 'https://pagopa.atlassian.net/wiki/spaces/DEVOPS/pages/474546518/Checkov+ignore+v0.0.0?focusedCommentId=487031214#comment-487031214'

* Change Checkov default output

* Use commit hash to tag build

* Fix Checkov: CKV_K8S_14

* Fix Checkov: CKV_K8S_37

* Fix Checkov: CKV_K8S_20

* Fix Checkov: CKV_K8S_31

* Fix Checkov: CKV_K8S_22

* Add Checkov skip-check ref to Confluence page

* Ignore Checkov rules: CKV_K8S_22, CKV_K8S_28, CKV_K8S_37

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -1,6 +1,6 @@
 image:
   repository: dvopladneuacr.azurecr.io/templatemicroserviziok8s
-  tag: "latest"
+  tag: "1dd0109082e799bd5ee4474de2433a91d2b95fc5"
   pullPolicy: Always
 
 namespace: "helm-template"
@@ -14,9 +14,12 @@ serviceAccount:
 
 podAnnotations: {}
 
-podSecurityContext: {}
+podSecurityContext:
+  seccompProfile:
+    type: RuntimeDefault
 
-securityContext: {}
+securityContext:
+  allowPrivilegeEscalation: false
 
 service:
   type: ClusterIP
