--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "microservice-chart.fullname" . }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "microservice-chart.labels" . | nindent 4 }}
   annotations:
@@ -28,6 +29,7 @@ spec:
         aadpodidbinding: "{{ .Values.namespace }}-pod-identity"
         {{- include "microservice-chart.selectorLabels" . | nindent 8 }}
     spec:
+      automountServiceAccountToken: false
       serviceAccountName: {{ include "microservice-chart.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
