--- a/src/values.yaml
+++ b/src/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: dvoplauneuacr.azurecr.io/templatemicroserviziok8s
+  repository: ""
+  tag: "v1.0.0"
   pullPolicy: Always
-  tag: "1.0.0"
 
 namespace: ""
 nameOverride: ""
@@ -27,11 +27,11 @@ service:
 
 resources:
   requests:
-    memory: "64Mi"
-    cpu: "250m"
+    memory: "96Mi"
+    cpu: "40m"
   limits:
     memory: "128Mi"
-    cpu: "500m"
+    cpu: "150m"
 
 autoscaling:
   minReplica: 1
@@ -53,3 +53,4 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
