--- a/example/helm/values-uat.yaml
+++ b/example/helm/values-uat.yaml
@@ -1,55 +1,56 @@
-image:
-  repository: dvoplauneuacr.azurecr.io/templatemicroserviziok8s
-  pullPolicy: Always
-  tag: "1.0.0"
+microservice-chart:
+  image:
+    repository: ""
+    pullPolicy: Always
+    tag: "1.0.0"
 
-namespace: ""
-nameOverride: ""
-fullnameOverride: ""
+  namespace: ""
+  nameOverride: ""
+  fullnameOverride: ""
 
-serviceAccount:
-  create: false
-  annotations: {}
-  name: ""
+  serviceAccount:
+    create: false
+    annotations: {}
+    name: ""
 
-podAnnotations: {}
+  podAnnotations: {}
 
-podSecurityContext:
-  seccompProfile:
-    type: RuntimeDefault
+  podSecurityContext:
+    seccompProfile:
+      type: RuntimeDefault
 
-securityContext:
-  allowPrivilegeEscalation: false
+  securityContext:
+    allowPrivilegeEscalation: false
 
-service:
-  type: ClusterIP
-  port: 80
+  service:
+    type: ClusterIP
+    port: 80
 
-resources:
-  requests:
-    memory: "64Mi"
-    cpu: "250m"
-  limits:
-    memory: "128Mi"
-    cpu: "500m"
+  resources:
+    requests:
+      memory: "64Mi"
+      cpu: "250m"
+    limits:
+      memory: "128Mi"
+      cpu: "500m"
 
-autoscaling:
-  minReplica: 1
-  maxReplica: 1
-  pollingInterval: 30 # seconds
-  cooldownPeriod: 300 # seconds
-  triggers: []
+  autoscaling:
+    minReplica: 1
+    maxReplica: 1
+    pollingInterval: 30 # seconds
+    cooldownPeriod: 300 # seconds
+    triggers: []
 
-envConfig: {}
+  envConfig: {}
 
-envSecret: {}
+  envSecret: {}
 
-keyvault:
-  name: ""
-  tenantId: ""
+  keyvault:
+    name: ""
+    tenantId: ""
 
-nodeSelector: {}
+  nodeSelector: {}
 
-tolerations: []
+  tolerations: []
 
-affinity: {}
+  affinity: {}
