--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,7 @@ jobs:
 
       - name: Release
         uses: cycjimmy/semantic-release-action@v2
+        id: semantic
         with:
           semantic_version: 18.0.0
           extra_plugins: |
@@ -32,3 +33,15 @@ jobs:
             @semantic-release/git@10.0.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Configure Git
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@v1.1.0
+        with:
+          version: ${{ steps.semantic.outputs.new_release_version }}
+        env:
+          CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
