--- a/src/Chart.yaml
+++ b/src/Chart.yaml
@@ -1,5 +1,6 @@
 apiVersion: v2
 name: microservice-chart
 description: A Helm chart for PagoPA microservice
-type: library
+type: application
 version: 1.0.0
+appVersion: "0.0.0"
