feat: Create helm repo (#12)
* Reorganize files

* Add a single generic values.yaml

* Add repo index.yaml

* Set theme jekyll-theme-minimal

* Add helm package

* Add helm dep to example

* Add docs info and setup script

* Sync correct semver

* Update README title

* Configure chart and semver

* Add publish bin for GitHub pages

* Delete GitHub pages files

* Update README on publish feature and add --target-branch to script

* Improve Checkov and add Github release action

* Add badges to README

* Fix Checkov values file

--- a/.github/workflows/check_helm.yml
+++ b/.github/workflows/check_helm.yml
@@ -27,32 +27,12 @@ jobs:
           chmod 700 get_helm.sh
           ./get_helm.sh
 
-      - name: run_checkov_dev
+      - name: run_checkov
         run: |
-          FILE=./helm/values-dev.yaml
-          if [ -f "$FILE" ]; then
-            checkov -d ./helm --framework helm --var-file "$FILE"
+          FILE=./util/values.checkov.yaml
+          if [ -f "${FILE}" ]; then
+            checkov -d src --var-file "${FILE}" --framework helm
           else
-            echo "$FILE does not exist."
-            exit 0
-          fi
-
-      - name: run_checkov_uat
-        run: |
-          FILE=./helm/values-uat.yaml
-          if [ -f "$FILE" ]; then
-            checkov -d ./helm --framework helm --var-file "$FILE"
-          else
-            echo "$FILE does not exist."
-            exit 0
-          fi
-
-      - name: run_checkov_prod
-        run: |
-          FILE=./helm/values-prod.yaml
-          if [ -f "$FILE" ]; then
-            checkov -d ./helm --framework helm --var-file "$FILE"
-          else
-            echo "$FILE does not exist."
+            echo "${FILE} does not exist."
             exit 0
           fi
