fix: Set charts_dir in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,6 @@ on:
     paths-ignore:
       - 'CODEOWNERS'
       - '**.md'
-      - '.**'
 
 jobs:
   release:
@@ -36,5 +35,7 @@ jobs:
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.4.0
+        with:
+          charts_dir: /src
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
