--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,6 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.4.0
         with:
-          charts_dir: /src
+          charts_dir: src
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
