fix: Handle more then one config map value

--- a/charts/microservice-chart/templates/configmap.yaml
+++ b/charts/microservice-chart/templates/configmap.yaml
@@ -6,5 +6,5 @@ metadata:
   labels:
     {{- include "microservice-chart.labels" . | nindent 4 }}
 data:
-  {{ toYaml .Values.envConfig }}
+  {{- toYaml .Values.envConfig | nindent 2 }}
 
