--- a/example/helm/values-dev.yaml
+++ b/example/helm/values-dev.yaml
@@ -1,12 +1,15 @@
 microservice-chart:
+  namespace: "helm-template"
+  nameOverride: ""
+  fullnameOverride: ""
+
   image:
     repository: dvopladneuacr.azurecr.io/templatemicroserviziok8s
     tag: "1dd0109082e799bd5ee4474de2433a91d2b95fc5"
     pullPolicy: Always
 
-  namespace: "helm-template"
-  nameOverride: ""
-  fullnameOverride: ""
+  ingress:
+    host: "helm-template.ingress.devopslab.pagopa.it"
 
   serviceAccount:
     create: false
