--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -2,6 +2,14 @@ image:
   repository: ""
   tag: "v0.0.0"
   pullPolicy: Always
+  port: 80
+
+ingress:
+  host: ""
+  path: /(.*)
+  pathType: ImplementationSpecific
+  forceSslRedirect: true
+  rewriteTarget: /$1
 
 namespace: ""
 nameOverride: ""
@@ -53,4 +61,3 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
-
