--- a/charts/microservice-chart/templates/deployment.yaml
+++ b/charts/microservice-chart/templates/deployment.yaml
@@ -72,6 +72,7 @@ spec:
                   name: {{ include "microservice-chart.fullname" $ }}
                   key: {{ $key }}
             {{- end }}
+        {{- if .Values.ingress.create }}
         - name: crt-mounter
           securityContext:
             allowPrivilegeEscalation: false
@@ -88,6 +89,7 @@ spec:
             - name: secrets-store-inline-crt
               mountPath: "/mnt/secrets-store-crt"
               readOnly: true
+        {{- end }}
       volumes:
         - name: secrets-store-inline
           csi:
@@ -95,12 +97,14 @@ spec:
             readOnly: true
             volumeAttributes:
               secretProviderClass: {{ include "microservice-chart.fullname" $ }}
+        {{- if .Values.ingress.create }}
         - name: secrets-store-inline-crt
           csi:
             driver: secrets-store.csi.k8s.io
             readOnly: true
             volumeAttributes:
               secretProviderClass: {{ .Values.ingress.host | replace "." "-" }}
+        {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
