--- a/charts/microservice-chart/templates/ingress.yaml
+++ b/charts/microservice-chart/templates/ingress.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.ingress.create -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -22,3 +23,4 @@ spec:
   tls:
     - hosts: [{{ .Values.ingress.host }}]
       secretName: {{ .Values.ingress.host | replace "." "-" }}
+{{- end }}
